# diseno-y-analisis-de-algoritmos

./: .gitignore  CMakeLists.txt  README.md
tarea1/: .gitignore  CMakeLists.txt  Makefile  RTree.cpp  Readme.md  esquema_node.excalidraw  pipeline.excalidraw  x.excalidraw
tarea1/data/btrees/: Readme.md
tarea1/data/rectangles/: Readme.md  small_input_test.txt
tarea1/data/results/: Readme.md
tarea1/enunciado/: schema.excalidraw
tarea1/include/rectangle/: rect_generator.hpp  rectangle.hpp  test_rectangle.hpp
tarea1/include/rtree/: HilbertCurve.hpp  NearestX.hpp  Node.hpp  RTree.hpp  SortTileRecursive.hpp  rtree.hpp
tarea1/report/: .gitignore  analisis.ipynb  analisis_paper_style.ipynb  plotting.py  processing.py
tarea1/report/output/: execution_time.html  execution_time_boxplot.html  number_of_reads.html  number_of_reads_boxplot.html
tarea1/src/: main.cpp
tarea1/src/rectangle/: rect_generator.cpp  rectangle.cpp  test_rectangle.cpp
tarea1/src/rtree/: HilbertCurve.cpp  NearestX.cpp  Node.cpp  RTree.cpp  SortTileRecursive.cpp  rtree.cpp
tarea1/src/tests/: test_rectangles.cpp
tarea2/: .gitignore  CMakeLists.txt  Makefile  pipeline.excalidraw
tarea2/data/arrays/: u_10_array_0.txt  u_10_array_1.txt  u_10_array_2.txt  u_10_array_3.txt  u_10_array_4.txt  u_11_array_0.txt  u_11_array_1.txt  u_11_array_2.txt  (+301 more)
tarea2/report/: analisis.ipynb  data_loader.py  requirements.txt
tarea2/src/: main.cpp
tarea3/: .gitignore  CMakeLists.txt  Makefile  Readme.md  schema.excalidraw
tarea3/report/: analisis.ipynb  data_loader.py
tarea3/src/: main.cpp
(+42 files in other folders)
